添加了在扫描框显示底部文字

--- a/zxingLibrary/src/main/res/layout/activity_capture.xml
+++ b/zxingLibrary/src/main/res/layout/activity_capture.xml
@@ -16,11 +16,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:corner_color="@color/corner_color"
+        app:corner_color="#65E102"
         app:frame_color="@color/viewfinder_frame"
-        app:label_text="二维码扫描"
-        app:label_text_color="@color/colorAccent"
-        app:laser_color="@color/laser_color"
+        app:label_text="二维码扫描中"
+        app:label_text_color="@color/label_text_color"
+        app:laser_color="#65E102"
         app:mask_color="@color/viewfinder_mask"
         app:result_color="@color/result_view"
         app:result_point_color="@color/result_point_color" />
