--- a/zxingLibrary/src/main/res/values/colors.xml
+++ b/zxingLibrary/src/main/res/values/colors.xml
@@ -9,7 +9,8 @@
     <color name="result_view">#B0000000</color>
     <color name="viewfinder_frame">#90FFFFFF</color>
     <color name="result_point_color">#C0FFFF00</color>
-    <color name="laser_color">#0F0</color>
-    <color name="corner_color">#00FF00</color>
+    <color name="laser_color">#65E102</color>
+    <color name="corner_color">#65E102</color>
+    <color name="label_text_color">#A5A49F</color>
     <!--QRCode scanner color end-->
 </resources>
